# l33tdawg-sage

./: .gitignore  .golangci.yml  CITATION.cff  Dockerfile  Makefile  README.md  SECURITY.md  SECURITY_FAQ.md  THIRD_PARTY_NOTICES.md  go.mod  go.sum  server.json
.claude/: settings.json
api/: openapi.yaml
cmd/amid/: main.go
deploy/: Dockerfile.abci  docker-compose.det.yml  docker-compose.yml  init-testnet.sh  init.sql
docs/: ADMIN_BOOTSTRAP.md  ARCHITECTURE.md  BRAIN.md  FEDERATION.md  GETTING_STARTED.md  HOOKS.md  README.md  ROADMAP.md  connect.html  index.html
e2e/: dashboard.spec.js  governance.spec.js  network.spec.js
extension/: build.sh  manifest.firefox.json  store-listing.md
papers/: README.md
sage-memory/: SKILL.md
sdk/python/: README.md  pyproject.toml
sdk/python/examples/: complete_walkthrough.py  rbac_clearance.py
sdk/python/src/sage_sdk/: __init__.py  async_client.py  auth.py  client.py  exceptions.py  models.py
sdk/python/tests/: test_domain_reassign.py  test_models.py  test_org_federation.py
web/: autostart.go  connect_handler.go  embeddings_handler.go  governance_handler.go  handler.go  handler_health_embedder_test.go  handler_ledger.go  handler_ledger_test.go  handler_pipeline.go  handler_reranker.go  handler_test.go  import.go  import_test.go  network_handler.go  network_join_guest.go  pairing.go  pairing_test.go  rbac_signing.go  reassign_handler.go  reranker_setup_handler.go  sse.go  sse_test.go  update_handler.go  update_handler_test.go  wizard_chatgpt.go  wizard_chatgpt_test.go  wizard_chatgpt_token.go  wizard_chatgpt_unix.go  wizard_chatgpt_windows.go  wizard_security_test.go
(+270 files in other folders)
