[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sage-agent-sdk"
version = "6.6.1"
description = "Python SDK for SAGE — Sovereign Agent Governed Experience. Persistent, consensus-validated memory for AI agents."
readme = "README.md"
authors = [{name = "Dhillon Andrew Kannabhiran", email = "dhillon@levelupctf.com"}]
license = "Apache-2.0"
requires-python = ">=3.10"
keywords = ["sage", "ai", "agent", "memory", "bft", "consensus", "llm", "mcp", "multi-agent", "pipeline"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "httpx>=0.25.0",
    "pydantic>=2.0.0",
    "PyNaCl>=1.5.0",
]

[project.urls]
Homepage = "https://github.com/l33tdawg/sage"
Documentation = "https://l33tdawg.github.io/sage/"
Repository = "https://github.com/l33tdawg/sage"
Issues = "https://github.com/l33tdawg/sage/issues"
Changelog = "https://github.com/l33tdawg/sage/releases"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "respx>=0.21",
]

[tool.setuptools.packages.find]
where = ["src"]
